--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mysql2": "^3.14.1",
     "nodemailer": "^6.10.1",
     "sequelize": "^6.37.7",
+    "sequelize-cli": "^6.6.3",
     "validator": "^13.15.0",
     "winston": "^3.17.0",
     "xss-clean": "^0.1.4"
