--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nodemailer": "^6.10.1",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.3",
+    "swagger-ui-express": "^5.0.1",
     "validator": "^13.15.0",
     "winston": "^3.17.0",
     "xss-clean": "^0.1.4"
